infra/nginx/ingress.yaml
# nginx-ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-tailscale-ingress
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
      - nginx-app
  rules:
    - host: "nginx-app"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
